[package]
name = "commas"
description = "A command line utility to reformat data in shell pipelines."
license-file = "LICENSE"
version = "0.1.4"
edition = "2021"

[package.metadata.release]
# Match the tag pattern expected by .github/workflows/release.yml: bare
# semver, no `v` prefix (e.g. `0.1.1`).
tag-name = "{{version}}"
# Not a library — don't push to crates.io.
publish = false
# Fast-forward from origin before releasing; abort if histories diverged.
pre-release-hook = ["git", "pull", "--ff-only", "--tags"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
linedance = "0.2.0"
shlex = "1.3.0"
subst = "0.3.7"
